# qilisdk

./: .buildinfo  .clang-format  .clang-tidy  .codecov.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  README.md  cov.sh  generic-functional-result-design.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: backport.yml  code_quality.yml  platform_builds.yml  platforms.yml  publish.yml  pythonpublish.yml  smoke_build.yml  sphinx.yml  tests.yml  tests_tox.yml  tox.yml  tox_single.yml
.sonarlint/: connectedMode.json
0.1.5/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.1.5/.doctrees/: environment.pickle  index.doctree
0.1.5/_modules/: index.html
0.1.5/_static/: pygments.css
0.1.5/examples/: circuits.html  code_examples.html  hamiltonians.html  models.html  quantum_objects.html  time_evolution.html
0.1.5/fundamentals/: analog.html  backends.html  common.html  cost_functions.html  digital.html  functionals.html  speqtrum.html
0.1.5/getting_started/: installation.html  introduction.html
0.1.6/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.1.6/.doctrees/: environment.pickle  index.doctree
0.1.6/_modules/: index.html
0.1.6/_static/: custom.css  pygments.css
0.1.6/examples/: circuits.html  code_examples.html  hamiltonians.html  models.html  quantum_objects.html  time_evolution.html
0.1.6/fundamentals/: analog.html  backends.html  core.html  cost_functions.html  digital.html  functionals.html  speqtrum.html
0.1.6/getting_started/: installation.html  introduction.html
0.1.7/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.1.7/.doctrees/: index.doctree
0.1.7/_modules/: index.html
0.1.7/_static/: custom.css  pygments.css
0.1.7/examples/: circuits.html  circuits.ipynb  code_examples.html  hamiltonians.html  models.html  quantum_objects.html  time_evolution.html
0.1.7/fundamentals/: analog.html  backends.html  core.html  cost_functions.html  digital.html  functionals.html  speqtrum.html
0.1.7/getting_started/: installation.html  introduction.html  quickstart.html
0.1.8/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.1.8/.doctrees/: index.doctree
0.1.8/_modules/: index.html
0.1.8/examples/: circuits.html  code_examples.html  hamiltonians.html  models.html  quantum_objects.html  time_evolution.html
0.1.8/fundamentals/: analog.html  backends.html  core.html  cost_functions.html  digital.html  functionals.html  noise_models.html  speqtrum.html
0.1.8/getting_started/: installation.html  introduction.html  quickstart.html
_modules/: index.html
_modules/qilisdk/: settings.html  yaml.html
benchmarks/: .gitignore  CMakeLists.txt  RESULTS.md  bench_sr_solve.cpp  run_bench.sh
ca/0.1.5/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
ca/0.1.6/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
ca/0.1.7/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
ca/0.1.8/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
ca/0.2.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
ca/0.2.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
ca/main/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
changes/: 1.misc.md  10.feature.md  100.feature.1.md  100.feature.md  101.feature.md  104.doc.md  104.misc.md  106.misc.md  109.doc.md  11.feature.md  113.bugfix.md  113.feature.md  114.doc.md  116.feature.md  117.feature.md  118.bugfix.md  118.feature.1.md  118.feature.2.md  119.doc.md  12.feature.md  120.bugfix.md  120.doc.md  121.bugfix.md  121.misc.md  122.misc.md  122.removal.md  123.misc.md  125.bugfix.1.md  125.bugfix.md  126.feature.1.md  126.feature.md  126.misc.md  127.feature.md  128.misc.md  129.misc.md  131.doc.md  131.feature.md  132.doc.md  133.doc.md  135.misc.md  (+185 more)
code/api/: index.html
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt
docs/Examples/: code_examples.ipynb
docs/Fundamentals_and_Usage/: algorithms.rst  analog.rst  backends.rst  backends_qaas.rst  common.rst  digital.rst  functionals.rst  model.rst  qaas.rst
docs/_static/: custom.css
docs/_templates/: footer.html  header.html  versioning.html
docs/examples/: circuit.qasm  circuits.ipynb  code_examples.ipynb  code_examples.rst  hamiltonians.ipynb  models.ipynb  quantum_objects.ipynb  time_evolution.ipynb
docs/fundamentals/: analog.rst  backends.rst  common.rst  core.rst  cost_functions.rst  digital.rst  functionals.rst  noise_models.rst  qaas.rst  readout.rst  speqtrum.rst
docs/getting_started/: installation.rst  introduction.rst  qilisdk101.md  quickstart.rst
docs/modules/: analog.rst  backends.rst  core.rst  cost_functions.rst  digital.rst  functionals.rst  noise_models.rst  speqtrum.rst
docs/shared/: install_note.rst  knapsack_problem.rst  team_building.rst  (+1 more)
en/: index.html
examples/: circuits.html  circuits.ipynb  hamiltonians.html  models.html  quantum_objects.html  time_evolution.html
fundamentals/: analog.html  backends.html  common.html  digital.html  functionals.html  qaas.html
getting_started/: installation.html  introduction.html
main/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
scripts/: checks.sh  copyrights.sh  cov.sh  cov_cpp.sh  cov_python.sh  coverage.sh  docs.sh  has_changelog.sh  install_dev.sh  linting.sh  missing_translations.sh
tests/: test_logging.py  test_optionals.py
(+8485 files in other folders)
