[project]
name = "qilisdk"
version = "0.1.7"
description = "QiliSDK is a Python framework for writing digital and analog quantum algorithms and executing them across multiple quantum backends. Its modular design streamlines the development process and enables easy integration with a variety of quantum platforms."
readme = "README.md"
authors = [{name = "Qilimanjaro Quantum Tech", email = "info@qilimanjaro.tech"}]
requires-python = ">=3.11"
keywords = ["qilimanjaro", "quantum computing", "digital quantum computing", "analog quantum computing"]
urls = { "Homepage" = "https://github.com/qilimanjaro-tech/qilisdk", "Documentation" = "https://qilimanjaro-tech.github.io/qilisdk/", "Source" = "https://github.com/qilimanjaro-tech/qilisdk", "Issues" = "https://github.com/qilimanjaro-tech/qilisdk/issues", "Changelog" = "https://github.com/qilimanjaro-tech/qilisdk/blob/main/CHANGELOG.md" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "dill>=0.3.9",
    "numpy>=2.2.0",
    "ruamel-yaml>=0.18.16",
    "scipy>=1.16.3; sys_platform == 'darwin'",
    "scipy>=1.15,<1.16.3; sys_platform != 'darwin'",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "mkl-service>=2.4.2; sys_platform != 'darwin'",
]

[project.optional-dependencies]
cuda = [
    "cuda-quantum-cu12==0.13.0",
]
speqtrum = [
    "httpx==0.28.1",
    "keyring>=25.6.0",
    "keyrings-alt>=5.0.2",
]
qutip = [
    "qutip>=5.2.2",
    "qutip-qip>=0.4.1",
]
openfermion = [
    "openfermion>=1.7.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.147.0",
    "ipykernel>=7.1.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-sugar>=1.1.1",
    "ruff>=0.14.6",
    "towncrier>=25.8.0",
    "loguru-caplog>=0.2.0",
    "pytest-cov>=7.0.0",
]
docs = [
    "astroid<3.2",
    "nbsphinx>=0.9.7",
    "pypandoc>=1.15",
    "sphinx>=8.1.3",
    "sphinx-autoapi==3.1.0",
    "sphinx-automodapi>=0.20.0",
    "sphinx-design>=0.6.1",
    "sphinx-mdinclude>=0.6.2",
    "sphinx-multiversion",
    "sphinxawesome-theme>=5.3.2",
]

[tool.uv.sources]
sphinx-multiversion = { git = "https://github.com/sphinx-contrib/multiversion", branch = "main"}
numpy = [{ index = "numpy-mkl", marker = "sys_platform != 'darwin'" }]
scipy = [{ index = "numpy-mkl", marker = "sys_platform != 'darwin'" }]
mkl-service = [{ index = "numpy-mkl", marker = "sys_platform != 'darwin'" }]

[[tool.uv.index]]
name = "numpy-mkl"
url = "https://urob.github.io/numpy-mkl"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.hypothesis",
    "/.devcontainer",
    "/.vscode",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.mypy_cache",
    "/dist",
    "/docs",
    "/changes",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qilisdk"]

[tool.ruff]
line-length = 120
output-format = "concise"
target-version = "py310"

[tool.ruff.lint]
preview = true
select = [
    "F",
    "E",
    "W",
    "I",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "CPY",
    "C4",
    "DTZ",
    "T10",
    "FA",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TC",
    "PTH",
    "TD",
    "PL",
    "NPY",
    "FURB",
    "DOC",
    "RUF"
]
ignore = [
    "E111",
    "E114",
    "E117",
    "E501",
    "E742",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "E741",
    "W191",
    "RET504",
    "SIM117",
    "PLC0414",
    "PLC2701",
    "PLR0904",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR0917",
    "PLR1702",
    "TD003"]
dummy-variable-rgx = "^_$"
exclude = [".tmp", "docs/*"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S", "CPY", "SLF001", "PLR", "DOC", "RUF012"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
exclude = ["\\.ipynb$"]

[tool.pytest.ini_options]
markers = [
    "core: tests that only exercise the core library",
    "cuda: tests that require the cuda extra",
    "qutip: tests that require the qutip extra",
    "speqtrum: tests that require the speqtrum extra"
]

[tool.towncrier]
package = "qilisdk"
directory = "changes"
filename = "CHANGELOG.md"
issue_format = "[PR #{issue}](https://github.com/qilimanjaro-tech/qilisdk/pulls/{issue})"
