[project]
name = "qilisdk"
version = "0.2.1"
description = "QiliSDK is a Python framework for writing digital and analog quantum algorithms and executing them across multiple quantum backends. Its modular design streamlines the development process and enables easy integration with a variety of quantum platforms."
readme = "README.md"
authors = [{name = "Qilimanjaro Quantum Tech", email = "info@qilimanjaro.tech"}]
requires-python = ">=3.11"
keywords = ["qilimanjaro", "quantum computing", "digital quantum computing", "analog quantum computing"]
urls = { "Homepage" = "https://github.com/qilimanjaro-tech/qilisdk", "Documentation" = "https://qilimanjaro-tech.github.io/qilisdk/", "Source" = "https://github.com/qilimanjaro-tech/qilisdk", "Issues" = "https://github.com/qilimanjaro-tech/qilisdk/issues", "Changelog" = "https://github.com/qilimanjaro-tech/qilisdk/blob/main/CHANGELOG.md" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "dill>=0.4.1",
    "numpy>=2.3,<2.4.1; sys_platform == 'darwin'",
    "numpy>=2.4.1; sys_platform != 'darwin'",
    "ruamel-yaml>=0.18.16",
    "scipy>=1.16.3; sys_platform == 'darwin'",
    "scipy>=1.15,<1.16.3; sys_platform != 'darwin'",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "py-cpuinfo>=9.0.0",
    "setuptools>=82.0.1",
    "gputil>=1.4.0",
    "mkl-service>=2.6.1; sys_platform != 'darwin' and platform_machine != 'aarch64'",
    "rustworkx>=0.17.1",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
cuda = [
    "qilisdk[cuda12]"
]
cuda12 = [
    "cuda-quantum-cu12==0.14.2",
    # CUDA math libraries used by the QiliSim C++ GPU shim (cuBLAS/cuSOLVER),
    # loaded at runtime via dlopen. cusolver pulls in cusparse + nvjitlink.
    "nvidia-cuda-runtime-cu12",
    "nvidia-cublas-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-nvjitlink-cu12",
]
cuda13 = [
    "cuda-quantum-cu13==0.14.2",
    # CUDA math libraries used by the QiliSim C++ GPU shim (cuBLAS/cuSOLVER),
    # loaded at runtime via dlopen. cusolver pulls in cusparse + nvjitlink.
    "nvidia-cuda-runtime",
    "nvidia-cublas",
    "nvidia-cusolver",
    "nvidia-cusparse",
    "nvidia-nvjitlink",
]
speqtrum = [
    "httpx==0.28.1",
    "keyring>=25.6.0",
    "keyrings-alt>=5.0.2",
]
qutip = [
    "qutip>=5.2.3",
    "qutip-qip>=0.4.1",
]
openfermion = [
    "openfermion>=1.7.1",
]
qir = [
    "pyqir>=0.10.0",
]
openqasm = [
    "openqasm3[parser]>=1.0.1",
]
scip = [
    "pyscipopt>=5.0.0",
]
all = [
    "qilisdk[cuda12]",
    "qilisdk[speqtrum]",
    "qilisdk[qutip]",
    "qilisdk[openfermion]",
    "qilisdk[qir]",
    "qilisdk[openqasm]",
    "qilisdk[scip]",
]
all-cu12 = [
    "qilisdk[cuda12]",
    "qilisdk[speqtrum]",
    "qilisdk[qutip]",
    "qilisdk[openfermion]",
    "qilisdk[qir]",
    "qilisdk[openqasm]",
    "qilisdk[scip]",
]
all-cu13 = [
    "qilisdk[cuda13]",
    "qilisdk[speqtrum]",
    "qilisdk[qutip]",
    "qilisdk[openfermion]",
    "qilisdk[qir]",
    "qilisdk[openqasm]",
    "qilisdk[scip]",
]

[dependency-groups]
dev = [
    "hypothesis>=6.152.4",
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.12",
    "towncrier>=25.8.0",
    "loguru-caplog>=0.2.0",
    "pytest-cov>=7.1.0",
    "gcovr>=8.6",
    "ty>=0.0.33",
    "diff-cover>=10.2.1",
]
docs = [
    "astroid<3.2",
    "nbsphinx>=0.9.7",
    "pypandoc>=1.15",
    "sphinx==8.2.3",
    "sphinx-autoapi>=3.4.0",
    "sphinx-automodapi>=0.20.0",
    "sphinx-design>=0.7.0",
    "sphinx-mdinclude>=0.6.2",
    "sphinx-multiversion==0.2.4",
    "sphinxawesome-theme==5.3.2",
    "sphinx-intl",
    "sphinx-tabs>=3.5.0",
]

[tool.uv]
# openfermion 1.7.1 caps requests~=2.32.2; override until upstream loosens.
override-dependencies = ["nbconvert >= 7.17.0", "requests>=2.33.0"]
# Floor recurring transitive CVE offenders so a generic re-resolve cannot regress them.
constraint-dependencies = [
    "bleach>=6.4.0",              # W-26
    "cryptography>=48.0.1",       # high (W-26)
    "pydantic-settings>=2.14.2",  # W-26
    "tornado>=6.5.7",             # W-26
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
conflicts = [
    [
      { extra = "cuda12" },
      { extra = "cuda13" },
    ],
    [
      { extra = "cuda" },
      { extra = "cuda13" },
    ],
    [
      { extra = "all-cu12" },
      { extra = "all-cu13" },
    ],
    [
      { extra = "all" },
      { extra = "all-cu13" },
    ],
]

[tool.uv.sources]
sphinx-multiversion = { git = "https://github.com/sphinx-contrib/multiversion", branch = "main"}
numpy = [{ index = "numpy-mkl", marker = "sys_platform != 'darwin' and platform_machine != 'aarch64'" }]
scipy = [{ index = "numpy-mkl", marker = "sys_platform != 'darwin' and platform_machine != 'aarch64'" }]
mkl-service = [{ index = "numpy-mkl", marker = "sys_platform != 'darwin' and platform_machine != 'aarch64'" }]

[[tool.uv.index]]
name = "numpy-mkl"
url = "https://urob.github.io/numpy-mkl"
explicit = true

[[tool.uv.index]]
name = "speqtrum"
url = "https://api.pyx.dev/simple/qilimanjaro/speqtrum"
publish-url = "https://api.pyx.dev/v1/upload/qilimanjaro/speqtrum"
explicit = true

[[tool.uv.index]]
name = "euroqcs"
url = "https://api.pyx.dev/simple/qilimanjaro/euroqcs"
publish-url = "https://api.pyx.dev/v1/upload/qilimanjaro/euroqcs"
explicit = true

[build-system]
requires = ["scikit-build-core", "pybind11>=2.13,<3"]
build-backend = "scikit_build_core.build"

[tool.scikit-build.sdist]
exclude = [
    "/.github",
    "/.hypothesis",
    "/.devcontainer",
    "/.vscode",
    "/.pytest_cache",
    "/.ruff_cache",
    "/dist",
    "/docs",
    "/changes",
    "/tests",
]

[tool.scikit-build]
cmake.args = ["-DCMAKE_VERBOSE_MAKEFILE:BOOL=ON"]
cmake.build-type = "Release"
editable.verbose = false

[[tool.scikit-build.overrides]]
if.platform-system = "^win32$"
inherit.cmake.args = "append"
cmake.args = ["-A", "x64"]

[tool.scikit-build.wheel]
packages = ["src/qilisdk"]

[tool.cibuildwheel.windows]
repair-wheel-command = "delvewheel repair -w {dest_dir} --no-dll qilisim_module*.pyd {wheel}"

[tool.ty.src]
include = ["src"]
exclude = ["tests"]

[tool.ruff]
line-length = 120
output-format = "concise"
target-version = "py313"

[tool.ruff.lint]
preview = true
select = [
    "F",
    "E",
    "W",
    "I",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "CPY",
    "C4",
    "DTZ",
    "T10",
    "FA",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TC",
    "PTH",
    "TD",
    "PL",
    "NPY",
    "FURB",
    "DOC",
    "RUF"
]
ignore = [
    "S311",
    "E111",
    "E114",
    "E117",
    "E501",
    "E742",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "E741",
    "W191",
    "RET504",
    "SIM117",
    "PLC0414",
    "PLC2701",
    "PLR0904",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR0917",
    "PLR1702",
    "TD003",
    "DOC502",
    "RUF067"
]
dummy-variable-rgx = "^_$"
exclude = [".tmp", "docs/*"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S", "CPY", "SLF001", "PLR", "DOC", "RUF012", "RUF069"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
markers = [
    "core: tests that only exercise the core library",
    "cuda: tests that require the cuda extra",
    "qutip: tests that require the qutip extra",
    "speqtrum: tests that require the speqtrum extra"
]

[tool.towncrier]
package = "qilisdk"
directory = "changes"
filename = "CHANGELOG.md"
issue_format = "[PR #{issue}](https://github.com/qilimanjaro-tech/qilisdk/pull/{issue})"
